--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             </div>
             <div class="what font2"><p>What are you</p><p>having for lunch?</p></div>
             <div class="icons font">
-                <div class="taco"><img  class=" fit-picture" src="assets/mexican taco.jpg"><p>Mexican Taco</p></div>
-                <div class="pizza"><img class=" fit-picture" src="assets/pizza.png"><p>Farmhouse Pizza</p></div>
-                <div class="burger"><img class=" fit-picture" src="assets/burger.jpg"><p>Chicken Burger</p></div>
-                <div class="nachos "><img class=" fit-picture" src="assets/nachos.jpg"><p>Loaded Nachos</p></div>
+                <div class="taco"><img  class=" fit-picture" src="mexican taco.jpg"><p>Mexican Taco</p></div>
+                <div class="pizza"><img class=" fit-picture" src="pizza.png"><p>Farmhouse Pizza</p></div>
+                <div class="burger"><img class=" fit-picture" src="burger.jpg"><p>Chicken Burger</p></div>
+                <div class="nachos "><img class=" fit-picture" src="nachos.jpg"><p>Loaded Nachos</p></div>
             </div>
             <div class="discription font"><p>Lorem ipsum dolor sit amet, consectetur</p><p>adipiscing elit, sed do eiusmod tempor</p><p>incididunt ut labore et.</p><p class="line"></p></div>
         </div>
