--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
                 </div>
                 <div class="lorem font2"><p>Lorem</p></div>
-                <div class="shop"><img class="cart" src="assets/shopping.png"></div>
+                <div class="shop"><img class="cart" src="shopping.png"></div>
             </div>
             <div class="what font2"><p>What are you</p><p>having for lunch?</p></div>
             <div class="icons font">
